Switch from BS cards to simpler divs. Initate grid design

--- a/index.html
+++ b/index.html
@@ -69,189 +69,230 @@
     <!--Gameboard with cards-->
     <section id="gameboard">
       <div class="gameboard-background">
-        <div class="row">
-          <div class="col-3">
-            <div class="card card-front">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-            <div class="card card-back">
-              <img src="assets/images/glyptodon.webp" class="card-img img-fluid" alt="">
-              <div class="card-body d-flex align-items-end mt-auto">
-                <h6 class="card-title">Glyptodon</h6>
+        <div class="container game-container">
+          <div class="cards">
+            <div class="row">
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/glyptodon.webp" alt="An image of a glyptodon">
+                </div>
+              </div>
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/irish-elk.webp" alt="An image of an Irish Elk">
+                </div>
+              </div>
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/megatherium.webp" alt="An image of a megatherium">
+                </div>
+              </div>
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/short-faced-bear.webp" alt="An image of a short-faced-bear">
+                </div>
+              </div>
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/smilodon.webp" alt="An image of a smilodon">
+                </div>
+              </div>
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/steppe-bison.webp" alt="An image of a steppe bison">
+                </div>
+              </div>
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/titanis.webp" alt="An image of a titanis bird">
+                </div>
+              </div>
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/woolly-mammoth.webp" alt="An image of a woolly mammoth">
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-3">
-            <div class="card card-front">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-            <div class="card card-back">
-              <img src="assets/images/irish-elk.webp" class="card-img img-fluid" alt="">
-              <div class="card-body d-flex align-items-end mt-auto">
-                <h6 class="card-title">Irish Elk</h6>
+            <div class="row">
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/smilodon.webp" alt="An image of a smilodon">
+                </div>
+              </div>
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/steppe-bison.webp" alt="An image of a steppe bison">
+                </div>
+              </div>
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/titanis.webp" alt="An image of a titanis bird">
+                </div>
+              </div>
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/woolly-mammoth.webp" alt="An image of a woolly mammoth">
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-3">
-            <div class="card card-front">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-            <div class="card card-back">
-              <img src="assets/images/megatherium.webp" class="card-img img-fluid" alt="">
-              <div class="card-body text-wrap d-flex align-items-end mt-auto">
-                <h6 class="card-title">Megatherium</h6>
+            <div class="row">
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/glyptodon.webp" alt="An image of a glyptodon">
+                </div>
+              </div>
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/irish-elk.webp" alt="An image of an Irish Elk">
+                </div>
+              </div>
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/megatherium.webp" alt="An image of a megatherium">
+                </div>
+              </div>
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/short-faced-bear.webp" alt="An image of a short-faced-bear">
+                </div>
+              </div>
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/smilodon.webp" alt="An image of a smilodon">
+                </div>
+              </div>
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/steppe-bison.webp" alt="An image of a steppe bison">
+                </div>
+              </div>
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/titanis.webp" alt="An image of a titanis bird">
+                </div>
+              </div>
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/woolly-mammoth.webp" alt="An image of a woolly mammoth">
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-3">
-            <div class="card card-front">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-            <div class="card card-back h-50">
-              <img src="assets/images/short-faced-bear.webp" class="card-img img-fluid" alt="">
-              <div class="card-body d-flex align-items-end mt-auto">
-                <h6 class="card-title">Short-faced Bear</h6>
+            <div class="row">
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/smilodon.webp" alt="An image of a smilodon">
+                </div>
               </div>
-            </div>
-          </div>
-        </div>
-        <br>
-        <div class="row">
-          <div class="col-3">
-            <div class="card card-front">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-            <div class="card card-back">
-              <img src="assets/images/smilodon.webp" class="card-img img-fluid" alt="">
-              <div class="card-body d-flex align-items-end mt-auto">
-                <h6 class="card-title">Smilodon</h6>
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/steppe-bison.webp" alt="An image of a steppe bison">
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="card card-front">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-            <div class="card card-back">
-              <img src="assets/images/steppe-bison.webp" class="card-img img-fluid" alt="">
-              <div class="card-body card-text text-center">
-                <p>Steppe Bison</p>
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/titanis.webp" alt="An image of a titanis bird">
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="card card-front">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-            <div class="card card-back">
-              <img src="assets/images/titanis.webp" class="card-img img-fluid" alt="">
-              <div class="card-body card-text text-center">
-                <p>Titanis</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="card card-front">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-            <div class="card card-back h-50">
-              <img src="assets/images/woolly-mammoth.webp" class="card-img img-fluid" alt="">
-              <div class="card-body card-text text-center">
-                <p>Woolly Mammoth</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <br>
-        <div class="row">
-          <div class="col-3">
-            <div class="card card-front">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-            <div class="card card-back h-50">
-              <img src="assets/images/megatherium.webp" class="card-img img-fluid" alt="">
-              <div class="card-body card-text text-center">
-                <p>Megatherium</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="card card-front">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-            <div class="card card-back">
-              <img src="assets/images/steppe-bison.webp" class="card-img img-fluid" alt="">
-              <div class="card-body card-text">
-                <p>Steppe Bison</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="card card-front">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-            <div class="card card-back">
-              <img src="assets/images/titanis.webp" class="card-img img-fluid" alt="">
-              <div class="card-body card-text">
-                <p>Titanis</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="card card-front">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-            <div class="card card-back">
-              <img src="assets/images/glyptodon.webp" class="card-img img-fluid" alt="">
-              <div class="card-body card-text">
-                <p>Gylptodon</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <br>
-        <div class="row">
-          <div class="col-3">
-            <div class="card card-front">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-            <div class="card card-back">
-              <img src="assets/images/short-faced-bear.webp" class="card-img img-fluid" alt="">
-              <div class="card-body card-text">
-                <p>Short-faced Bear</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="card card-front">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-            <div class="card card-back">
-              <img src="assets/images/woolly-mammoth.webp" class="card-img img-fluid" alt="">
-              <div class="card-body card-text">
-                <p>Woolly Mammoth</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="card card-front">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-            <div class="card card-back">
-              <img src="assets/images/smilodon.webp" class="card-img img-fluid" alt="">
-              <div class="card-body card-text">
-                <p>Smilodon</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="card card-front">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-            <div class="card card-back">
-              <img src="assets/images/irish-elk.webp" class="card-img img-fluid" alt="">
-              <div class="card-body card-text">
-                <p>Irish Elk</p>
+              <div class="game-card">
+                <div class="view card-front">
+                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                    alt="A stone question mark on a background of ferns">
+                </div>
+                <div class="view card-back">
+                  <img class="img-fluid" src="assets/images/woolly-mammoth.webp" alt="An image of a woolly mammoth">
+                </div>
               </div>
             </div>
           </div>
