Add countdown element before cards

--- a/index.html
+++ b/index.html
@@ -68,8 +68,12 @@
     </section>
     <!--Gameboard with cards-->
     <section id="gameboard">
+      <div id="countdown">
+        <h4>Countdown Timer</h4>
+        <span id="time">00:00:00</span>
+      </div>
       <div class="gameboard-background">
-        <div class="container game-container">
+        <div class="container-fluid game-container">
           <div class="cards">
             <div class="row">
               <div class="game-card">
