Initiate JS functionality for timer element

--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
     </section>
     <!--Gameboard with cards-->
     <section id="gameboard">
-      <div id="countdown">
+      <div id="countdown" class="justify-content-center">
         <h4>Countdown Timer</h4>
+        <button id="timerStartBtn" class="btn btn-success">Start!</button>
         <span id="time">00:00:00</span>
       </div>
       <div class="gameboard-background">
