Add JS timer for 60 seconds linked to start button

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div id="countdown" class="justify-content-center">
         <h4>Countdown Timer</h4>
         <button id="timerStartBtn" class="btn btn-success">Start!</button>
-        <span id="time">00:00:00</span>
+        <span id="time">1 minute</span>
       </div>
       <div class="gameboard-background">
         <div class="container-fluid game-container">
