--- a/index.html
+++ b/index.html
@@ -56,176 +56,159 @@
       laudantium repudiandae, odit quisquam voluptates officia veritatis tenetur iusto atque sapiente nostrum id soluta
       omnis expedita in.
     </p>
-    <!--Start screen message-->
-    <section id="startScreen">
-      <div>
-        <h1>Prehistoric Puzzler</h1>
-      </div>
-      <div>
-        <button id="startBtn" class="btn btn-success">Click here to begin!</button>
-      </div>
-      <br>
-    </section>
     <!--Gameboard with cards-->
-    <section id="gameboard">
-      <div id="countdown" class="justify-content-center">
-        <h4>Countdown Timer</h4>
-        <button id="timerStartBtn" class="btn btn-success">Start!</button>
-        <span id="time">1 minute</span>
-      </div>
-      <div class="gameboard-background">
-        <div class="container-fluid game-container">
-          <div class="cards">
-            <div class="row">
-              <div class="game-card">
-                <div class="view card-front">
-                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
-                    alt="A stone question mark on a background of ferns">
-                </div>
-                <div class="view card-back">
-                  <img class="img-fluid" src="assets/images/glyptodon.webp" alt="An image of a glyptodon">
-                </div>
+    <section id="gameboard" class="container-fluid">
+      <div class="container game-container">
+        <div class="cards" id="cards">
+          <div class="row">
+            <div class="game-card">
+              <div class="view card-front">
+                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                  alt="A stone question mark on a background of ferns">
               </div>
-              <div class="game-card">
-                <div class="view card-front">
-                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
-                    alt="A stone question mark on a background of ferns">
-                </div>
-                <div class="view card-back">
-                  <img class="img-fluid" src="assets/images/irish-elk.webp" alt="An image of an Irish Elk">
-                </div>
-              </div>
-              <div class="game-card">
-                <div class="view card-front">
-                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
-                    alt="A stone question mark on a background of ferns">
-                </div>
-                <div class="view card-back">
-                  <img class="img-fluid" src="assets/images/megatherium.webp" alt="An image of a megatherium">
-                </div>
-              </div>
-              <div class="game-card">
-                <div class="view card-front">
-                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
-                    alt="A stone question mark on a background of ferns">
-                </div>
-                <div class="view card-back">
-                  <img class="img-fluid" src="assets/images/short-faced-bear.webp" alt="An image of a short-faced-bear">
-                </div>
+              <div class="view card-back hidden">
+                <img class="img-fluid" src="assets/images/glyptodon.webp" alt="An image of a glyptodon">
               </div>
             </div>
-            <div class="row">
-              <div class="game-card">
-                <div class="view card-front">
-                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
-                    alt="A stone question mark on a background of ferns">
-                </div>
-                <div class="view card-back">
-                  <img class="img-fluid" src="assets/images/smilodon.webp" alt="An image of a smilodon">
-                </div>
+            <div class="game-card">
+              <div class="view card-front">
+                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                  alt="A stone question mark on a background of ferns">
               </div>
-              <div class="game-card">
-                <div class="view card-front">
-                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
-                    alt="A stone question mark on a background of ferns">
-                </div>
-                <div class="view card-back">
-                  <img class="img-fluid" src="assets/images/steppe-bison.webp" alt="An image of a steppe bison">
-                </div>
-              </div>
-              <div class="game-card">
-                <div class="view card-front">
-                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
-                    alt="A stone question mark on a background of ferns">
-                </div>
-                <div class="view card-back">
-                  <img class="img-fluid" src="assets/images/titanis.webp" alt="An image of a titanis bird">
-                </div>
-              </div>
-              <div class="game-card">
-                <div class="view card-front">
-                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
-                    alt="A stone question mark on a background of ferns">
-                </div>
-                <div class="view card-back">
-                  <img class="img-fluid" src="assets/images/woolly-mammoth.webp" alt="An image of a woolly mammoth">
-                </div>
+              <div class="view card-back hidden">
+                <img class="img-fluid" src="assets/images/irish-elk.webp" alt="An image of an Irish Elk">
               </div>
             </div>
-            <div class="row">
-              <div class="game-card">
-                <div class="view card-front">
-                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
-                    alt="A stone question mark on a background of ferns">
-                </div>
-                <div class="view card-back">
-                  <img class="img-fluid" src="assets/images/glyptodon.webp" alt="An image of a glyptodon">
-                </div>
+            <div class="game-card">
+              <div class="view card-front">
+                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                  alt="A stone question mark on a background of ferns">
               </div>
-              <div class="game-card">
-                <div class="view card-front">
-                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
-                    alt="A stone question mark on a background of ferns">
-                </div>
-                <div class="view card-back">
-                  <img class="img-fluid" src="assets/images/irish-elk.webp" alt="An image of an Irish Elk">
-                </div>
-              </div>
-              <div class="game-card">
-                <div class="view card-front">
-                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
-                    alt="A stone question mark on a background of ferns">
-                </div>
-                <div class="view card-back">
-                  <img class="img-fluid" src="assets/images/megatherium.webp" alt="An image of a megatherium">
-                </div>
-              </div>
-              <div class="game-card">
-                <div class="view card-front">
-                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
-                    alt="A stone question mark on a background of ferns">
-                </div>
-                <div class="view card-back">
-                  <img class="img-fluid" src="assets/images/short-faced-bear.webp" alt="An image of a short-faced-bear">
-                </div>
+              <div class="view card-back hidden">
+                <img class="img-fluid" src="assets/images/megatherium.webp" alt="An image of a megatherium">
               </div>
             </div>
-            <div class="row">
-              <div class="game-card">
-                <div class="view card-front">
-                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
-                    alt="A stone question mark on a background of ferns">
-                </div>
-                <div class="view card-back">
-                  <img class="img-fluid" src="assets/images/smilodon.webp" alt="An image of a smilodon">
-                </div>
+            <div class="game-card">
+              <div class="view card-front">
+                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                  alt="A stone question mark on a background of ferns">
               </div>
-              <div class="game-card">
-                <div class="view card-front">
-                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
-                    alt="A stone question mark on a background of ferns">
-                </div>
-                <div class="view card-back">
-                  <img class="img-fluid" src="assets/images/steppe-bison.webp" alt="An image of a steppe bison">
-                </div>
+              <div class="view card-back hidden">
+                <img class="img-fluid" src="assets/images/short-faced-bear.webp" alt="An image of a short-faced-bear">
               </div>
-              <div class="game-card">
-                <div class="view card-front">
-                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
-                    alt="A stone question mark on a background of ferns">
-                </div>
-                <div class="view card-back">
-                  <img class="img-fluid" src="assets/images/titanis.webp" alt="An image of a titanis bird">
-                </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="game-card">
+              <div class="view card-front">
+                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                  alt="A stone question mark on a background of ferns">
               </div>
-              <div class="game-card">
-                <div class="view card-front">
-                  <img class="img-fluid" src="assets/images/stone-question-mark.webp"
-                    alt="A stone question mark on a background of ferns">
-                </div>
-                <div class="view card-back">
-                  <img class="img-fluid" src="assets/images/woolly-mammoth.webp" alt="An image of a woolly mammoth">
-                </div>
+              <div class="view card-back hidden">
+                <img class="img-fluid" src="assets/images/smilodon.webp" alt="An image of a smilodon">
+              </div>
+            </div>
+            <div class="game-card">
+              <div class="view card-front">
+                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                  alt="A stone question mark on a background of ferns">
+              </div>
+              <div class="view card-back hidden">
+                <img class="img-fluid" src="assets/images/steppe-bison.webp" alt="An image of a steppe bison">
+              </div>
+            </div>
+            <div class="game-card">
+              <div class="view card-front">
+                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                  alt="A stone question mark on a background of ferns">
+              </div>
+              <div class="view card-back hidden">
+                <img class="img-fluid" src="assets/images/titanis.webp" alt="An image of a titanis bird">
+              </div>
+            </div>
+            <div class="game-card">
+              <div class="view card-front">
+                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                  alt="A stone question mark on a background of ferns">
+              </div>
+              <div class="view card-back hidden">
+                <img class="img-fluid" src="assets/images/woolly-mammoth.webp" alt="An image of a woolly mammoth">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="game-card">
+              <div class="view card-front">
+                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                  alt="A stone question mark on a background of ferns">
+              </div>
+              <div class="view card-back hidden">
+                <img class="img-fluid" src="assets/images/glyptodon.webp" alt="An image of a glyptodon">
+              </div>
+            </div>
+            <div class="game-card">
+              <div class="view card-front">
+                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                  alt="A stone question mark on a background of ferns">
+              </div>
+              <div class="view card-back hidden">
+                <img class="img-fluid" src="assets/images/irish-elk.webp" alt="An image of an Irish Elk">
+              </div>
+            </div>
+            <div class="game-card">
+              <div class="view card-front">
+                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                  alt="A stone question mark on a background of ferns">
+              </div>
+              <div class="view card-back hidden">
+                <img class="img-fluid" src="assets/images/megatherium.webp" alt="An image of a megatherium">
+              </div>
+            </div>
+            <div class="game-card">
+              <div class="view card-front">
+                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                  alt="A stone question mark on a background of ferns">
+              </div>
+              <div class="view card-back hidden">
+                <img class="img-fluid" src="assets/images/short-faced-bear.webp" alt="An image of a short-faced-bear">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="game-card">
+              <div class="view card-front">
+                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                  alt="A stone question mark on a background of ferns">
+              </div>
+              <div class="view card-back hidden">
+                <img class="img-fluid" src="assets/images/smilodon.webp" alt="An image of a smilodon">
+              </div>
+            </div>
+            <div class="game-card">
+              <div class="view card-front">
+                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                  alt="A stone question mark on a background of ferns">
+              </div>
+              <div class="view card-back hidden">
+                <img class="img-fluid" src="assets/images/steppe-bison.webp" alt="An image of a steppe bison">
+              </div>
+            </div>
+            <div class="game-card">
+              <div class="view card-front">
+                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                  alt="A stone question mark on a background of ferns">
+              </div>
+              <div class="view card-back hidden">
+                <img class="img-fluid" src="assets/images/titanis.webp" alt="An image of a titanis bird">
+              </div>
+            </div>
+            <div class="game-card">
+              <div class="view card-front">
+                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                  alt="A stone question mark on a background of ferns">
+              </div>
+              <div class="view card-back hidden">
+                <img class="img-fluid" src="assets/images/woolly-mammoth.webp" alt="An image of a woolly mammoth">
               </div>
             </div>
           </div>
