Adjust sizing for smaller screens

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="card-viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="Prehistoric Puzzler, come face-to-face with extinct megafauna through a JavaScript based memory game">
   <title>Prehistoric Puzzler | Play!</title>
@@ -48,7 +48,7 @@
     </nav>
   </header>
   <main class="container-fluid">
-    <h1 class="display-1"> Prehistoric Puzzler</h1>
+    <h1 class="display-3"> Prehistoric Puzzler</h1>
     <h2> Test your memory and learn about Earth's extinct monster megafauna!</h2>
     <h3> Instructions </h3>
     <p class="container-fluid">
@@ -62,152 +62,152 @@
         <div class="cards" id="cards">
           <div class="row">
             <div class="game-card">
-              <div class="view card-front">
+              <div class="card-view card-front">
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-              <div class="view card-back hidden">
+              <div class="card-view card-back hidden">
                 <img class="img-fluid" src="assets/images/glyptodon.webp" alt="An image of a glyptodon">
               </div>
             </div>
             <div class="game-card">
-              <div class="view card-front">
+              <div class="card-view card-front">
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-              <div class="view card-back hidden">
+              <div class="card-view card-back hidden">
                 <img class="img-fluid" src="assets/images/irish-elk.webp" alt="An image of an Irish Elk">
               </div>
             </div>
             <div class="game-card">
-              <div class="view card-front">
+              <div class="card-view card-front">
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-              <div class="view card-back hidden">
+              <div class="card-view card-back hidden">
                 <img class="img-fluid" src="assets/images/megatherium.webp" alt="An image of a megatherium">
               </div>
             </div>
             <div class="game-card">
-              <div class="view card-front">
+              <div class="card-view card-front">
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-              <div class="view card-back hidden">
+              <div class="card-view card-back hidden">
                 <img class="img-fluid" src="assets/images/short-faced-bear.webp" alt="An image of a short-faced-bear">
               </div>
             </div>
           </div>
           <div class="row">
             <div class="game-card">
-              <div class="view card-front">
+              <div class="card-view card-front">
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-              <div class="view card-back hidden">
+              <div class="card-view card-back hidden">
                 <img class="img-fluid" src="assets/images/smilodon.webp" alt="An image of a smilodon">
               </div>
             </div>
             <div class="game-card">
-              <div class="view card-front">
+              <div class="card-view card-front">
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-              <div class="view card-back hidden">
+              <div class="card-view card-back hidden">
                 <img class="img-fluid" src="assets/images/steppe-bison.webp" alt="An image of a steppe bison">
               </div>
             </div>
             <div class="game-card">
-              <div class="view card-front">
+              <div class="card-view card-front">
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-              <div class="view card-back hidden">
+              <div class="card-view card-back hidden">
                 <img class="img-fluid" src="assets/images/titanis.webp" alt="An image of a titanis bird">
               </div>
             </div>
             <div class="game-card">
-              <div class="view card-front">
+              <div class="card-view card-front">
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-              <div class="view card-back hidden">
+              <div class="card-view card-back hidden">
                 <img class="img-fluid" src="assets/images/woolly-mammoth.webp" alt="An image of a woolly mammoth">
               </div>
             </div>
           </div>
           <div class="row">
             <div class="game-card">
-              <div class="view card-front">
+              <div class="card-view card-front">
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-              <div class="view card-back hidden">
+              <div class="card-view card-back hidden">
                 <img class="img-fluid" src="assets/images/glyptodon.webp" alt="An image of a glyptodon">
               </div>
             </div>
             <div class="game-card">
-              <div class="view card-front">
+              <div class="card-view card-front">
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-              <div class="view card-back hidden">
+              <div class="card-view card-back hidden">
                 <img class="img-fluid" src="assets/images/irish-elk.webp" alt="An image of an Irish Elk">
               </div>
             </div>
             <div class="game-card">
-              <div class="view card-front">
+              <div class="card-view card-front">
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-              <div class="view card-back hidden">
+              <div class="card-view card-back hidden">
                 <img class="img-fluid" src="assets/images/megatherium.webp" alt="An image of a megatherium">
               </div>
             </div>
             <div class="game-card">
-              <div class="view card-front">
+              <div class="card-view card-front">
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-              <div class="view card-back hidden">
+              <div class="card-view card-back hidden">
                 <img class="img-fluid" src="assets/images/short-faced-bear.webp" alt="An image of a short-faced-bear">
               </div>
             </div>
           </div>
           <div class="row">
             <div class="game-card">
-              <div class="view card-front">
+              <div class="card-view card-front">
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-              <div class="view card-back hidden">
+              <div class="card-view card-back hidden">
                 <img class="img-fluid" src="assets/images/smilodon.webp" alt="An image of a smilodon">
               </div>
             </div>
             <div class="game-card">
-              <div class="view card-front">
+              <div class="card-view card-front">
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-              <div class="view card-back hidden">
+              <div class="card-view card-back hidden">
                 <img class="img-fluid" src="assets/images/steppe-bison.webp" alt="An image of a steppe bison">
               </div>
             </div>
             <div class="game-card">
-              <div class="view card-front">
+              <div class="card-view card-front">
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-              <div class="view card-back hidden">
+              <div class="card-view card-back hidden">
                 <img class="img-fluid" src="assets/images/titanis.webp" alt="An image of a titanis bird">
               </div>
             </div>
             <div class="game-card">
-              <div class="view card-front">
+              <div class="card-view card-front">
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-              <div class="view card-back hidden">
+              <div class="card-view card-back hidden">
                 <img class="img-fluid" src="assets/images/woolly-mammoth.webp" alt="An image of a woolly mammoth">
               </div>
             </div>
