--- a/learn.html
+++ b/learn.html
@@ -10,7 +10,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="card-viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="Prehistoric Puzzler, come face-to-face with extinct megafauna through a JavaScript based memory game">
   <title>Prehistoric Puzzler | Learn!</title>
