Fix width 100% issue carusing mobile view bug

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="card-viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="Prehistoric Puzzler, come face-to-face with extinct megafauna through a JavaScript based memory game">
   <title>Prehistoric Puzzler | Play!</title>
@@ -16,10 +16,8 @@
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
-
 </head>
 
 <body class="d-flex flex-column">
@@ -53,12 +51,13 @@
     <h3> Instructions </h3>
     <p class="container-fluid">
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam, provident. Consequuntur unde reprehenderit,
-      laudantium repudiandae, odit quisquam voluptates officia veritatis tenetur iusto atque sapiente nostrum id soluta
+      laudantium repudiandae, odit quisquam voluptates officia veritatis tenetur iusto atque sapiente nostrum id
+      soluta
       omnis expedita in.
     </p>
     <!--Gameboard with cards-->
     <section id="gameboard" class="container-fluid">
-      <div class="container game-container">
+      <div class="container game-section-container">
         <div class="cards" id="cards">
           <div class="row">
             <div class="game-card">
