--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
   </header>
   <main class="container-fluid">
     <h1 class="display-3"> Prehistoric Puzzler</h1>
+    <!--Pre-game confirmation screen-->
+    <section id="start-screen-container">
+      <div>
+        <h1>Prehistoric Puzzler</h1>
+      </div>
+      <div>
+        <button id="start-button" class="btn btn-success">Click here to begin!</button>
+      </div>
+      <br>
+    </section>
+    <!--Gameboard-->
     <div class="intro-section-container">
       <h2> Test your memory and learn about Earth's extinct monster megafauna!</h2>
       <h3> Instructions </h3>
@@ -147,8 +158,11 @@
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-              <div class="card-view card-back hidden">
-                <img class="img-fluid" src="assets/images/glyptodon.webp" alt="An image of a glyptodon">
+            </div>
+            <div class="game-card">
+              <div class="card-view card-front">
+                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                  alt="A stone question mark on a background of ferns">
               </div>
             </div>
             <div class="game-card">
@@ -156,26 +170,11 @@
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-              <div class="card-view card-back hidden">
-                <img class="img-fluid" src="assets/images/irish-elk.webp" alt="An image of an Irish Elk">
-              </div>
             </div>
             <div class="game-card">
               <div class="card-view card-front">
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
-              </div>
-              <div class="card-view card-back hidden">
-                <img class="img-fluid" src="assets/images/megatherium.webp" alt="An image of a megatherium">
-              </div>
-            </div>
-            <div class="game-card">
-              <div class="card-view card-front">
-                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
-                  alt="A stone question mark on a background of ferns">
-              </div>
-              <div class="card-view card-back hidden">
-                <img class="img-fluid" src="assets/images/short-faced-bear.webp" alt="An image of a short-faced-bear">
               </div>
             </div>
           </div>
@@ -185,8 +184,11 @@
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-              <div class="card-view card-back hidden">
-                <img class="img-fluid" src="assets/images/smilodon.webp" alt="An image of a smilodon">
+            </div>
+            <div class="game-card">
+              <div class="card-view card-front">
+                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                  alt="A stone question mark on a background of ferns">
               </div>
             </div>
             <div class="game-card">
@@ -194,26 +196,11 @@
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-              <div class="card-view card-back hidden">
-                <img class="img-fluid" src="assets/images/steppe-bison.webp" alt="An image of a steppe bison">
-              </div>
             </div>
             <div class="game-card">
               <div class="card-view card-front">
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
-              </div>
-              <div class="card-view card-back hidden">
-                <img class="img-fluid" src="assets/images/titanis.webp" alt="An image of a titanis bird">
-              </div>
-            </div>
-            <div class="game-card">
-              <div class="card-view card-front">
-                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
-                  alt="A stone question mark on a background of ferns">
-              </div>
-              <div class="card-view card-back hidden">
-                <img class="img-fluid" src="assets/images/woolly-mammoth.webp" alt="An image of a woolly mammoth">
               </div>
             </div>
           </div>
