confirmation reveals gameboard and removes start screen message

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
       <div>
         <button id="start-game-button" class="btn btn-success"
-          onclick="document.getElementById(gameboard).style.display='block'; alert('Do you want to start the game?'); document.getElementById(start-screen-container).style.display='none'">Click
+          onclick="document.getElementById(gameboard).style.display='block'; alert('Do you want to start the game?')">Click
           here to begin!</button>
       </div>
       <br>
