--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
               <a class="nav-link nav-active" href="index.html">Home - Play the Game! <span
                   class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="learn.html">Meet the megafauna!</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -59,7 +56,7 @@
     <!--Pre-game confirmation screen-->
     <section id="start-screen-container">
       <div>
-        <h1>Prehistoric Puzzler</h1>
+        <h1 id="start-screen-title">Prehistoric Puzzler</h1>
       </div>
       <div>
         <button id="start-game-button" class="btn btn-success"
@@ -70,9 +67,9 @@
     </section>
     <!--Gameboard with cards-->
     <section id="gameboard" class="container-fluid" style="display: none;">
-      <p><span class="score">Score:</span></p>
-      <div timer id="game-timer" class="game-timer"></div>
       <div class="actions">
+        <button id="begin-countdown-button" onclick="beginCountdown()">Begin!</button>
+        <div timer id="game-timer" class="game-timer"></div>
         <button onclick="restart()">Restart</button>
       </div>
       <div class="container game-section-container">
@@ -159,11 +156,8 @@
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-            </div>
-            <div class="game-card">
-              <div class="card-view card-front">
-                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
-                  alt="A stone question mark on a background of ferns">
+              <div class="card-view card-back hidden">
+                <img class="img-fluid" src="assets/images/smilodon.webp" alt="An image of a smilodon">
               </div>
             </div>
             <div class="game-card">
@@ -171,11 +165,26 @@
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
+              <div class="card-view card-back hidden">
+                <img class="img-fluid" src="assets/images/short-faced-bear.webp" alt="An image of a short-faced-bear">
+              </div>
             </div>
             <div class="game-card">
               <div class="card-view card-front">
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
+              </div>
+              <div class="card-view card-back hidden">
+                <img class="img-fluid" src="assets/images/megatherium.webp" alt="An image of a megatherium">
+              </div>
+            </div>
+            <div class="game-card">
+              <div class="card-view card-front">
+                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                  alt="A stone question mark on a background of ferns">
+              </div>
+              <div class="card-view card-back hidden">
+                <img class="img-fluid" src="assets/images/irish-elk.webp" alt="An image of an Irish Elk">
               </div>
             </div>
           </div>
@@ -185,11 +194,8 @@
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
-            </div>
-            <div class="game-card">
-              <div class="card-view card-front">
-                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
-                  alt="A stone question mark on a background of ferns">
+              <div class="card-view card-back hidden">
+                <img class="img-fluid" src="assets/images/steppe-bison.webp" alt="An image of a steppe bison">
               </div>
             </div>
             <div class="game-card">
@@ -197,11 +203,26 @@
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
               </div>
+              <div class="card-view card-back hidden">
+                <img class="img-fluid" src="assets/images/titanis.webp" alt="An image of a titanis bird">
+              </div>
             </div>
             <div class="game-card">
               <div class="card-view card-front">
                 <img class="img-fluid" src="assets/images/stone-question-mark.webp"
                   alt="A stone question mark on a background of ferns">
+              </div>
+              <div class="card-view card-back hidden">
+                <img class="img-fluid" src="assets/images/woolly-mammoth.webp" alt="An image of a woolly mammoth">
+              </div>
+            </div>
+            <div class="game-card">
+              <div class="card-view card-front">
+                <img class="img-fluid" src="assets/images/stone-question-mark.webp"
+                  alt="A stone question mark on a background of ferns">
+              </div>
+              <div class="card-view card-back hidden">
+                <img class="img-fluid" src="assets/images/glyptodon.webp" alt="An image of a glyptodon">
               </div>
             </div>
           </div>
